--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,18 @@ data/
 *.docx
 *.pdf
 
+# Image files
+*.png
+*.jpg
+*.jpeg
+*.gif
+*.bmp
+*.tiff
+*.svg
+
+# JSON files
+*.json
+
 # Model files
 models/
 checkpoints/
